SimLang/src/test/resources/test/coco/valid/MinModel.sim
sim MinModel {
  map_name MaschenerKreuz.osm;
}