SimLang/src/test/resources/test/coco/invalid/InfiniteRanges.sim
sim InfiniteRanges {
  sim_duration (-oo:1m:2m);
  map_name error.osm;
}